[package]
name = "ipgr"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities"]
description = "ip grep"
readme = "README.md"
license = "MIT"
repository = "https://github.com/raxpd/ipgr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
